# DocEval

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
doceval/: cli.py  config.py  judge.py  report.py  runner.py  schemas.py  scoring.py  storage.py
doceval/providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  openai_provider.py
doceval/tasks/: loader.py
doceval/tasks/fixtures/: editing.yaml  generation.yaml
tests/: test_scoring.py
